04/07/2021 - Added and centered buttons w/hover effect, added and centered footer, fixed up little glitches, removed scrollbar from side.

--- a/home.css
+++ b/home.css
@@ -1,5 +1,10 @@
-body {
+html, body {
     background-image: linear-gradient(to bottom, rgba(64,81,102,1) 0%, rgba(101,111,111,1) 100%);
+    position: fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
 
 .alagupfp {
@@ -16,6 +21,70 @@ body {
     -ms-animation: fadeIn ease 10s;
      
 }
+
+.button {
+    display: inline-block;
+    border-radius: 50px;
+    background-image: linear-gradient(to bottom, rgba(64,81,102,1) 0%, rgba(101,111,111,1) 100%);
+    border: 20px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding: 15px;
+    width: 150px;
+    cursor: pointer;
+    margin: 0 auto;
+    text-transform: uppercase;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  footer{
+      text-align: center;
+      padding: 3px;
+      background-color: rgba(101,111,111,1) 100%;
+      color: white;
+  }
+
+.container {
+    height:200px;
+    position: relative;
+    border: 3px solid green
+}
+
+.vertical-center {
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+
 @keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
@@ -55,6 +124,7 @@ body {
 
 .typewriter {
     font-family: 'Courier New', Courier, monospace;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
